--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@
 
 
       <!-- littlr info  -->
-    <section class="about-shop">
+     <section class="about-shop">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-        <h2 id="info" class="text-center">About Our Shop</h2>
+      <div class="col-md-12 text-center">
+        <h2 id="info">About Our Shop</h2>
         <p class="text-justify">
           At Govee Showcase, we're passionate about providing the best
           smart home solutions for our customers. Our mission is to make
